yaml/aws-cli-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-cli
  namespace: default
  labels:
    app: aws-cli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aws-cli
  template:
    metadata:
      labels:
        app: aws-cli
    spec:
      serviceAccountName: aws-cli-sa
      containers:
      - name: aws-cli
        image: public.ecr.aws/aws-cli/aws-cli:latest
        command:
          - "sleep"
          - "infinity"
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "200m"
