yaml/book-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-book-app-service
  namespace: default
spec:
  selector:
    app: go-book-app
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: LoadBalancer
